--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.0",
-    "nodemon": "^3.1.9"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.5",
+    "nodemon": "^3.1.9",
+    "sequelize": "^6.37.5"
   },
-  "port": "9999"	
+  "port": "9999"
 }
