--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^6.2.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
